Add application endpoints
