# packages/eps/api/src/handlers/application/application.js
@@ -1,2 +1,6 @@
 import postApplication from './post-application.js'
-export { postApplication }
+import putApplication from './put-application.js'
+import getApplicationByApplicationId from './get-application-by-application-id.js'
+import deleteApplication from './delete-application.js'
+
+export { postApplication, putApplication, getApplicationByApplicationId, deleteApplication }
