# packages/eps/api/src/handlers/application/delete-application.js
@@ -1,0 +1,18 @@
+import { models } from '../../model/sequentelize-model.js'
+import { cache } from '../../services/cache.js'
+
+export default async (context, req, h) => {
+  await cache.delete(req.path)
+  const count = await models.applications.destroy({
+    where: {
+      id: context.request.params.applicationId
+    }
+  })
+  if (count === 1) {
+    // Return no content
+    return h.response().code(204)
+  } else {
+    // Not found
+    return h.response().code(404)
+  }
+}
