# packages/eps/api/src/server.js
@@ -2,7 +2,7 @@ import Hapi from '@hapi/hapi'
 import Inert from '@hapi/inert'
 import { SERVER_PORT } from './constants.js'
 import { getUserByUserId, putUser, deleteUser, postUser } from './handlers/user/user.js'
-import { postApplication } from './handlers/application/application.js'
+import { getApplicationByApplicationId, postApplication, putApplication, deleteApplication } from './handlers/application/application.js'
 
 import validationFail from './handlers/validation-fail.js'
 import notFound from './handlers/not-found.js'
@@ -35,7 +35,10 @@ const init = async server => {
     postUser,
     putUser,
     deleteUser,
+    getApplicationByApplicationId,
     postApplication,
+    putApplication,
+    deleteApplication,
     validationFail,
     notFound,
     postResponseHandler
